<resources>
    <string name="app_name">Ultra Firewall</string>
    <string name="version_name">1.0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_toast">Press back again to exit!</string>

    <!--Main UI-->
    <string name="fw_off_title">FireWall is off, allowing all apps to access internet</string>
    <string name="fw_on_title">FireWall is on, blocking selected apps from accessing internet</string>
    <string name="fw_no_app_found">No App founded!</string>
    <string name="pid_title">UID\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="app_title">Application Details</string>
    <string name="search_hint">Search apps here</string>
    <!--Sort-->
    <string name="sort_block">Place blocked apps on the top</string>
    <string name="sort_title">Sort</string>
    <string-array name="sort_item" translatable="false">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>UID ↑</item>
        <item>UID ↓</item>
    </string-array>

    <!--Menu-->
    <string name="setting_title">Settings</string>
    <string name="stop_title">Stop FireWall</string>
    <string name="run_title">Execute Rules</string>

    <!--raw-->
    <string name="raw_iptables">iptables_armv5</string>
    <string name="raw_busy_box">busybox_g1</string>

    <!--Notification-->
    <string name="toast_bin_install_done">Binaries installed!</string>
    <string name="toast_bin_install_error">Error in installing %s!</string>
    <string name="dialog_loadApp_msg">Loading Apps, please wait...</string>
    <string name="snack_rule_saved">Rules Saved!</string>
    <string name="snack_execute_failed">Applying FireWall rules failed!</string>
    <string name="snack_execute_done">Applying FireWall rules successfully!</string>


    <!--For Ads View-->
    <string name="ad_unit_banner" translatable="false">ca-app-pub-6288726369328806/7080626173</string>
    <string name="ad_unit_banner_test" translatable="false"> ca-app-pub-3940256099942544/6300978111</string>

    <!--About-->
    <string name="action_about">About</string>
    <string name="app_info">Ultra Firewall ver 1.0</string>
    <string name="author">Author: Pham Van Manh</string>
    <string name="email">Email: manhterry93@gmail.com</string>
    <string name="icon_res">Icon Resources: https://icons8.com &amp;&amp; David Cross-http://webhostingmedia.net/</string>
    <string name="note">Note: This App require Root Access. \n So your device must be rooted to use this app.</string>
    <string name="about_like">If you like this app, rate it!</string>


</resources>
